finished the assignment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
         </div>
     </div>
 
-   <section class="container1">
+    <section class="container1">
+        <div class="h3">
+            <h3>DJ Cool  /</h3>
+        </div>
+        <div class="h3">
+            <h3>/  DJ Cooler  /</h3>
+        </div>
+        <div class="h3">
+            <h3>/  DJ Coolest</h3>
+        </div>
+    </section>
+
+   <section class="container2">
         <div class="item1">
             <p>Artists:<br><br>Someone important<br>Another one important<br>And some less important</p>
         </div>
